[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/main_gui.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = SubResource( 7 )

[sub_resource type="Environment" id=9]
background_mode = 4
glow_enabled = true
glow_intensity = 0.75
glow_bloom = 0.15
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/font/Minecraft.ttf"

[sub_resource type="DynamicFont" id=11]
size = 18
font_data = SubResource( 10 )

[node name="MainGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_top = 96.0
margin_right = 302.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.768627, 0.627451, 0, 1 )
text = "WAVE SHOOTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -136.0
margin_right = 64.0
margin_bottom = -72.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.396078, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.447059, 0.623529, 0.811765, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_left = 512.0
margin_top = 352.0
margin_right = 768.0
margin_bottom = 416.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.396078, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.447059, 0.623529, 0.811765, 1 )
text = "Tutorial"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 512.0
margin_top = 512.0
margin_right = 768.0
margin_bottom = 576.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.203922, 0.396078, 0.643137, 1 )
custom_colors/font_color_pressed = Color( 0.447059, 0.623529, 0.811765, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 32.0
margin_top = 640.0
margin_right = 202.0
margin_bottom = 672.0
custom_fonts/font = SubResource( 11 )
text = "Music by Saint Urya"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
